--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="https://png.pngtree.com/png-clipart/20230419/ourmid/pngtree-realistic-birthday-cake-with-ai-digital-artwork-png-image_6714145.png">
+    <link rel="icon" href="cake.png">
 </head>
 <body>
 <div class="congratulation">
-
     <canvas id=c></canvas>
 </div>
     
